tests/golden/invalid/unknown-var-05.rego
package fregot.tests.invalid.unknown_var_05

test_unknown_with_tabs {
	double(x, y)
}



test_unknown_with_tabs_in_line_with_two_digits {
	double(x, y) # line 10
}
